--- a/app/themes/default/sources/web_sections/show.html.erb
+++ b/app/themes/default/sources/web_sections/show.html.erb
@@ -1,1 +1,45 @@
-<%= @html.html_safe %>
+<header id="web-section-header">
+    <%= form_for(@web_section, url: edit_web_section_path(@id), method: :post) do |f| %>
+        <div class="buttons">
+            <div class="field is-horizontal">
+                <div class="field-body">
+                    <div class="field-label is-normal">
+                        <label class="label">Url</label>
+                    </div>
+                    <input type="hidden" id="id" name="id">
+                    <div class="field">
+                        <p class="control is-expanded has-icons-left">
+                            <input class="input" type="text" id="source-url" name="source-url" placeholder="URL" disabled>
+                            <span class="icon is-small is-left">
+                                <i class="fas fa-link"></i>
+                            </span>
+                        </p>
+                    </div>
+                    <div class="field-label is-normal">
+                        <label class="label">Xpath</label>
+                    </div>
+                    <div class="field">
+                        <p class="control is-expanded has-icons-left has-icons-right">
+                            <input class="input" type="text" id="xpath" name="xpath" placeholder="xpath" readonly>
+                            <span class="icon is-small is-left">
+                                <i class="fas fa-file-code"></i>
+                            </span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <button class="button is-link is-large" type="submit"><%= t(:save) %></button>
+            <button id="web-section-reset" type="reset" class="button is-medium"><%= t(:reset) %></button>
+        </div>
+    <% end %>
+</header>
+<main id="web-section-main">
+    <iframe id="web-section-iframe" src="<%= html_web_section_path(@id) %>"></iframe>
+    <div>
+        <%= t('.description') %>
+        <hr/>
+        <caption><%= t('.links') %></caption>
+        <ul id="show_links">
+        </ul>
+    </div>
+</main>
