--- a/app/javascript/css/application.scss
+++ b/app/javascript/css/application.scss
@@ -182,16 +182,8 @@ div.header > dl.links > dd {
 #web-site-iframe {
   padding: 0;
   margin: 0;
-  width: 70%;
+  width: 100%;
 }
-#web-site-main > div {
-  justify-content: flex-end;
-  padding: 10px;
-  text-size: 115%;
-  width: 30%;
-}
-
-#web-site-main > div > ul {
-  list-style: inside;
-  margin: 10px;
+#sources_web_site_source_url {
+  width: 20em;
 }
