Added support to change source_url during editing.

--- a/app/javascript/css/application.scss
+++ b/app/javascript/css/application.scss
@@ -177,7 +177,7 @@ div.header > dl.links > dd {
 }
 #web-site-main {
   display: flex;
-  height: calc(100% - 60px);
+  height: calc(100% - 80px);
 }
 #web-site-iframe {
   padding: 0;
@@ -186,4 +186,82 @@ div.header > dl.links > dd {
 }
 #sources_web_site_source_url {
   width: 20em;
+}
+// refs. https://projects.lukehaas.me/css-loaders/
+.loader,
+.loader:before,
+.loader:after {
+  background: #ffffff;
+  -webkit-animation: load1 1s infinite ease-in-out;
+  animation: load1 1s infinite ease-in-out;
+  width: 1em;
+  height: 4em;
+}
+.loader-box {
+  top: 50%;
+  left: 50%;
+  position:relative;
+}
+.loader-box > .loader-txt {
+  color: #fff;
+  font-weight: bold;
+  font-size: 130%;
+}
+.loader {
+  color: #fff;
+  text-indent: -9999em;
+  margin:30px;
+  position: relative;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+.loader:before,
+.loader:after {
+  position: absolute;
+  top: 0;
+  content: '';
+}
+.loader:before {
+  left: -1.5em;
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+.loader:after {
+  left: 1.5em;
+}
+@-webkit-keyframes load1 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 0;
+    height: 4em;
+  }
+  40% {
+    box-shadow: 0 -2em;
+    height: 5em;
+  }
+}
+@keyframes load1 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 0;
+    height: 4em;
+  }
+  40% {
+    box-shadow: 0 -2em;
+    height: 5em;
+  }
+}
+.loader-background {
+  width:100%;
+  margin-top:80px;
+  height: calc(100% - 80px);
+  z-index:999;
+  background-color: #000;
+  position: fixed;
+  opacity: 0.9;
 }
