--- a/app/themes/default/devise/shared/_links.html.erb
+++ b/app/themes/default/devise/shared/_links.html.erb
@@ -2,7 +2,7 @@
   <%= link_to t(".sign_in"), new_session_path(resource_name) %><br />
 <% end %>
 
-<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+<%- if ENV['MAX_MEMBER_COUNT'].to_i > User.all.count && devise_mapping.registerable? && controller_name != 'registrations' %>
   <%= link_to t(".sign_up"), new_registration_path(resource_name) %><br />
 <% end %>
 
