--- a/app/themes/default/layouts/application.html.erb
+++ b/app/themes/default/layouts/application.html.erb
@@ -12,8 +12,8 @@
       <title><%= @title %> | <%= t('sitename') %></title>
     <% end %>
     <% if defined? @noindex && @noindex %>
-    <% if @have_rss %>
-      <link rel="alternate" type="application/rss+xml" href="<%= request.path %>/rss/?<%= request.query_string %>">
+    <% if @rss_path %>
+      <link rel="alternate" type="application/rss+xml" href="<%= @rss_path %>?<%= request.query_string %>">
     <% end %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <% end %>
