Refactoring: Change to a descriptive name

--- a/app/themes/default/layouts/header/_information.html.erb
+++ b/app/themes/default/layouts/header/_information.html.erb
@@ -1,7 +1,7 @@
 <div id="information">
   <div class="header">
     <div class="order">
-      <% if params[:controller] == "pages" %>
+      <% if params[:controller] == "timelines" %>
       <%= render partial: "layouts/header/order" %>
       <% end %>
     </div>
