--- a/app/themes/default/layouts/header/_order.html.erb
+++ b/app/themes/default/layouts/header/_order.html.erb
@@ -23,7 +23,7 @@
       <a href="?sort=updated_at" class="dropdown-item <% if params["sort"] == "updated_at" %>is-active<% end %>">
         <%= t('sort_by_updated_at') %>
       </a>
-      <a href="?sort=count" class="dropdown-item <% if params["sort"] == "sort_by_shared_count" %>is-active<% end %>">
+      <a href="?sort=sort_by_shared_count" class="dropdown-item <% if params["sort"] == "sort_by_shared_count" %>is-active<% end %>">
         <%= t('sort_by_shared_count') %>
       </a>
     </div>
