--- a/app/javascript/css/application.scss
+++ b/app/javascript/css/application.scss
@@ -95,18 +95,17 @@ h2.menu-label {
   padding: 50px 10px 0 0;
 }
 div.header {
+  margin: 0 10px;
+}
+div.header > h1 {
+  font-size: 25px;
   display:flex;
   justify-content: flex-start;
+  position: absolute;
 }
 div.header > div.order {
-  margin: 0 auto 10px 10px;
-}
-div.header > dl.links {
-  display: flex;
-  margin:0 10px;
-}
-div.header > dl.links > dd {
-  margin:0 5px;
+  display:flex;
+  justify-content: flex-end;
 }
 
 @media only screen and (min-width: 768px) {
