Fixed to work autoscoll.

--- a/app/themes/default/timelines/show.html.erb
+++ b/app/themes/default/timelines/show.html.erb
@@ -22,6 +22,7 @@
               "expanded_url" => "content.expanded_url",
               "count_of_shared" => "{{content.count_of_shared}}",
               "created_at" => "{{content.created_at}}",
+              "updated_at" => "{{content.updated_at}}",
               "source" => {
                 "source_url" => "content.source.source_url",
                 "name" => "content.source.name",
