Refactor the layout.

--- a/app/themes/default/layouts/application.html.erb
+++ b/app/themes/default/layouts/application.html.erb
@@ -1,42 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <%= Configs::View[:head].html_safe if Configs::View[:head].is_a?(String) %>
-    <% if current_page?('/') %>
-      <title><%= t('sitename') %></title>
-    <% elsif params[:category] %>
-      <title><%= params[:category] %> | <%= t('sitename') %></title>
-    <% elsif @content %>
-      <title><%= t(:content_title, name: @content.source.name, title: @content.title) %> | <%= t('sitename') %></title>
-    <% elsif @title %>
-      <title><%= @title %> | <%= t('sitename') %></title>
-    <% end %>
-    <% if defined? @noindex && @noindex %>
-    <% if @rss_path %>
-      <link rel="alternate" type="application/rss+xml" href="<%= @rss_path %>?<%= request.query_string %>">
-    <% end %>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <% end %>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-    <%= stylesheet_pack_tag  'application', 'data-turbolinks-track': 'reload' %>
-    <%= stylesheet_link_tag  'custom', 'data-turbolinks-track': 'reload' %>
-  </head>
-  <body>
-    <%= Configs::View[:after_body].html_safe if Configs::View[:after_body].is_a?(String) %>
-    <%= render partial: "layouts/header/navi" %>
-    <%= render partial: "layouts/header/information" %>
-    <%= yield %>
-    <footer class="footer">
-      <div class="content has-text-centered">
-        <p>
-          <strong>newsdict</strong> by <%= link_to 'Yusuke Abe', 'https://newsdict.io/', target: :_blank %>. The source code is licensed
-          <%= link_to 'MIT', 'http://opensource.org/licenses/mit-license.php' %>. You can contact from <%= link_to 'this form', inquiries_path %>.
-        </p>
-      </div>
-    </footer>
-    <%= javascript_pack_tag  'application', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag  'custom', 'data-turbolinks-track': 'reload' %>
-    <%= Configs::View[:end_body].html_safe if Configs::View[:end_body].is_a?(String) %>
-  </body>
-</html>
+<%= render partial: "layouts/application" %>
