--- a/app/themes/default/contents/show.html.erb
+++ b/app/themes/default/contents/show.html.erb
@@ -61,6 +61,11 @@
                 </div>
             </section>
             <div class="columns">
+                <div class="column is-12 has-text-right-tablet">
+                    <button class="button is-light"><%= t('request_removing') %></button>
+                </div>
+            </div>
+            <div class="columns">
                 <div class="column is-6">
                     <div class="card events-card">
                         <header class="card-header">
