--- a/app/themes/default/contents/show.html.erb
+++ b/app/themes/default/contents/show.html.erb
@@ -62,7 +62,11 @@
             </section>
             <div class="columns">
                 <div class="column is-12 has-text-right-tablet">
-                    <button class="button is-light"><%= t('request_removing') %></button>
+                    <%= form_tag request_removing_inquiries_path, method: 'post' do %>
+                    <%= hidden_field_tag :id, @content.id %>
+                    <%= recaptcha_v3 action: 'request_removing', site_key: Configs::Global.find_by(key: :recaptcha_v3_site_key).value %>
+                    <%= submit_tag  t('request_removing'), class: "button" %>
+                    <% end %>
                 </div>
             </div>
             <div class="columns">
