--- a/app/javascript/css/application.scss
+++ b/app/javascript/css/application.scss
@@ -141,8 +141,11 @@ div.header > div.order {
 }
 .paper.card > footer {
   display: inline-flex;
-  justify-content:center;
+  margin: 0 0 0 15px;
   width: 100%;
+}
+.paper.card > footer > span {
+  margin: 5px 5px 0 5px;
 }
 .fixed-header {
   margin: 0;
@@ -263,4 +266,10 @@ div.header > div.order {
   background-color: #000;
   position: fixed;
   opacity: 0.9;
+}
+/** header **/
+.swipeTab.is-active {
+  background-color: #cdcdcd;
+  font-weight: bold;
+  color: #111;
 }
