Save the icon of twitter account.

--- a/app/themes/default/dashboards/show.html.erb
+++ b/app/themes/default/dashboards/show.html.erb
@@ -16,7 +16,7 @@
                     </div>
                     <div class="column has-text-weight-bold">
                         <div class="mt-2">
-                            <%= @contents[index].source.alias %>
+                            <%= @contents[index].source.view_name %>
                         </div>
                     </div>
                 </div>
