Fixed to work dashboard.

--- a/app/themes/default/dashboards/show.html.erb
+++ b/app/themes/default/dashboards/show.html.erb
@@ -29,7 +29,7 @@
                     </div>
                 </div>
                 <footer>
-                    <%= tag_element(@contents[index].longer_tags).html_safe %>
+                    <%= @contents[index].longer_tags.html_safe %>
                 </footer>
             </div>
         <% end %>
