Implemented to display `icon` on dashboards.

--- a/app/themes/default/dashboards/show.html.erb
+++ b/app/themes/default/dashboards/show.html.erb
@@ -12,7 +12,7 @@
                 <div class="columns is-mobile">
                     <div class="column is-1">
                         <figure class="image is-32x32">
-                            <img class="is-rounded" src="https://bulma.io/images/placeholders/32x32.png">
+                            <img class="is-rounded" src="<%= user_icon_path(@contents[index].source.id) %>">
                         </figure>
                     </div>
                     <div class="column has-text-weight-bold">
