--- a/app/themes/default/dashboards/show.html.erb
+++ b/app/themes/default/dashboards/show.html.erb
@@ -1,6 +1,6 @@
 <section class="container">
     <%= form_with(url: dashboards_search_path, method: :get, class: "field mx-5") do |f| %>
-        <%= f.text_field :keyword, value: params[:keyword], placeholder: t(".search"), class: "input is-rounded" %>
+        <%= f.text_field :search, value: params[:search], placeholder: t(".search"), class: "input is-rounded" %>
     <% end %>
     <div class="paper columns features">
         <% Newsdict::Application.config.paper_column_number.times.each do |column_num| %>
