--- a/app/themes/default/layouts/rails_admin/_head.html.haml
+++ b/app/themes/default/layouts/rails_admin/_head.html.haml
@@ -4,4 +4,6 @@
 %meta{content: "NONE,NOARCHIVE", name: "robots"}
 = csrf_meta_tag
 = stylesheet_link_tag "rails_admin/rails_admin.css", media: :all
+= stylesheet_link_tag "rails_admin/custom.css", media: :all
 = javascript_include_tag "rails_admin/rails_admin.js"
+= javascript_include_tag "rails_admin/custom.js"
