Support erb on webpacker.

--- a/app/javascript/imports/autoscroll.js.erb
+++ b/app/javascript/imports/autoscroll.js.erb
@@ -25,8 +25,8 @@ if (document.querySelector('#articles')) {
             parser.href = window.location
             Axios.get("/api/v1/contents.json",{
               params: {
-                skip: this.current_page * 25,
-                limit: 25,
+                skip: this.current_page * <%= Newsdict::Application.config.count_of_content_per_page %>,
+                limit: <%= Newsdict::Application.config.count_of_content_per_page %>,
                 sort: urlParams.get('sort'),
                 category: decodeURIComponent(parser.pathname.split('/')[2])
             }})
