--- a/app/themes/default/assets/stylesheets/rails_admin/bulma.sass
+++ b/app/themes/default/assets/stylesheets/rails_admin/bulma.sass
@@ -1,10 +1,10 @@
 @charset "utf-8"
 /*! node_modules/bulma */
-@import "bulma/sass/utilities/_all"
-@import "bulma/sass/base/_all"
-/*! @import "bulma/sass/elements/_all" */
-/*! @import "bulma/sass/form/_all" */
-/*! @import "bulma/sass/components/_all" */
-/*! @import "bulma/sass/grid/_all" */
-/*! @import "bulma/sass/helpers/_all" */
-/*! @import "bulma/sass/layout/_all" */
+@import "sass/utilities/_all"
+@import "sass/base/_all"
+/*! @import "sass/elements/_all" */
+/*! @import "sass/form/_all" */
+/*! @import "sass/components/_all" */
+/*! @import "sass/grid/_all" */
+/*! @import "sass/helpers/_all" */
+/*! @import "sass/layout/_all" */
