--- a/app/themes/default/assets/stylesheets/custom.scss
+++ b/app/themes/default/assets/stylesheets/custom.scss
@@ -173,6 +173,7 @@ div.header > div.order {
   padding: 0;
   margin: 0;
   width: 100%;
+  height: 700px;
 }
 #sources_web_site_source_url {
   width: 20em;
@@ -248,11 +249,12 @@ div.header > div.order {
 }
 .loader-background {
   width:100%;
-  margin-top:80px;
-  height: calc(100% - 80px);
+  height: 100%;
   z-index:999;
   background-color: #000;
   position: fixed;
+  top:0;
+  left:0;
   opacity: 0.9;
 }
 /** header **/
